# sebot

./: LICENSE  README.md  materiaali-0-ROS2Jazzy asennus.md  materiaali-1-lowlevel.md  materiaali-2-motordriver.md  materiaali-3-URDF.md  materiaali-4-diffdrive.md  materiaali-5-cpp.md  materiaali-6-web.md  materiaali-7-akun seuranta.md  materiaali-7-muuta.md  materiaali-8-muuta copy.md
SeBot malli/: SeBot alusta V6.ipt  SeBot alusta V6.stp
code/arduino/motorcontroller/: Motor.cpp  motorcontroller.ino  motorcontroller_battery.ino
code/md-publisher/: serve_md_files.py
code/md-publisher/markdown_files/: materiaali-0-ROS2Jazzy asennus.md  materiaali-1-lowlevel.md  materiaali-2-motordriver.md  materiaali-3-URDF.md  materiaali-4-diffdrive.md  materiaali-7-akun seuranta.md  materiaali-7-muuta.md
code/ros2_ws/config/: params.yaml  robot.urdf
code/ros2_ws/config/SeBot/: SeBot.stl  SeBot.urdf
code/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
code/ros2_ws/log/: latest_build
code/ros2_ws/src/battery/: battery_alert.py  package.xml  setup.py
code/ros2_ws/src/battery/battery/: battery_alert.py  battery_republish.py
code/ros2_ws/src/battery/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
code/ros2_ws/src/diffdrive/: package.xml  setup.py
code/ros2_ws/src/diffdrive/diffdrive/: cmd_vel.py  encoder.py  odom.py  odom_battery.py  pi_led.py  testi.py
code/ros2_ws/src/diffdrive/launch/: diffdrive.launch.py  diffdrive_battery.launch.py
code/ros2_ws/src/diffdrivec/: CMakeLists.txt
code/ros2_ws/src/diffdrivec/src/: cmd_vel.cpp  encoder.cpp  encoder.hpp  odom.cpp
code/ros2_ws/src/motordriver/: setup.py
code/ros2_ws/src/motordriver/launch/: motordriver.launch.py
code/ros2_ws/src/motordriver_msgs/: CMakeLists.txt
code/www/: asset-manifest.json  index.html  starthttpserver.sh
code/www/map/: .ros3d.min.js.swp  ros3d.js  roslib.js
code/www/static/css/: main.6cdead75.css
code/www/static/js/: main.0c53edf6.js
(+78 files in other folders)
